--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
         android:theme="@style/Theme.TRPG_TRY"
         tools:targetApi="31">
         <activity
+            android:name=".main_session"
+            android:exported="false"/>
+        <activity
             android:name=".signup_page"
             android:exported="false" />
         <activity
