--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.example.trpg_try">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
         android:usesCleartextTraffic="true"
@@ -17,6 +18,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TRPG_TRY"
         tools:targetApi="31">
+        <activity
+            android:name=".roadimage"
+            android:exported="false"/>
         <activity
             android:name=".main_session"
             android:exported="false"/>
